objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Customer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>