objects/Customer__c/fields/checkNumber__c.field-meta.xml
<CustomField>
    <fullName>checkNumber__c</fullName>
    <label>checkNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>