objects/Customer__c/fields/customerNumber__c.field-meta.xml
<CustomField>
    <fullName>customerNumber__c</fullName>
    <label>customerNumber</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>