objects/Customer__c/fields/paymentDate__c.field-meta.xml
<CustomField>
    <fullName>paymentDate__c</fullName>
    <label>paymentDate</label>
    <type>Date</type>
</CustomField>