objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>amount__c</columns>
    <columns>checkNumber__c</columns>
    <columns>customerNumber__c</columns>
    <columns>paymentDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>